# CG

./: CMakeLists.txt  README.md  fast_point_to_kdtree.cpp
cuda_include/: AABB.cuh  brdf.cuh  camera.cuh  core.cuh  geometry.cuh  image_writer.cuh  intersection.cuh  kdTree.cuh  obj_loader.cuh  ray.cuh  utils.cuh
cuda_src/: AABB.cu  CMakeLists.txt  brdf.cu  camera.cu  geometry.cu  image_writer.cu  intersection.cu  kdTree.cu  main.cu  obj_loader.cu  ray.cu
include/: accel.h  brdf.h  integrator.h  light.h  utils.h
libs/eigen/Eigen/src/Core/: Matrix.h
libs/eigen/Eigen/src/Geometry/: OrthoMethods.h
new_algorithm/: CMakeLists.txt  kdTreeRope.cpp  kdtree_split.cpp
report/: report.tex
src/: accel.cpp  brdf.cpp  film.cpp  integrator.cpp  light.cpp  main.cpp  scene.cpp
