cmake_minimum_required(VERSION 3.16)
set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc)
project(CS171-hw4 LANGUAGES C CXX CUDA)
set(CMAKE_CXX_STANDARD 20)
find_package(OpenMP)
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -g -G")

add_subdirectory(libs)
add_subdirectory(src)
add_subdirectory(cuda_src)
add_subdirectory(new_algorithm)